# itu-keplerbot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-and-release.yml
src/: cli.rs  course.rs  login.rs  main.rs  requester.rs
